--- a/www/src/Inamika/BackOfficeBundle/Resources/views/leftMenu.html.twig
+++ b/www/src/Inamika/BackOfficeBundle/Resources/views/leftMenu.html.twig
@@ -62,7 +62,7 @@
                 </li>
                 <li class="{% if 'inamika_backoffice_preformatteds' in app.request.get('_route') %}active{% endif %}">
                     <a href="{{ path('inamika_backoffice_preformatteds')}}" aria-expanded="false">
-                        <i class="fa fa-list"></i><span class="hide-menu">Lista preformateada</span>
+                        <i class="fa fa-list"></i><span class="hide-menu">Listas preformateadas</span>
                     </a>
                 </li>
                 {% if is_granted('ROLE_SUPER') %}
