--- a/www/src/Inamika/FrontendBundle/Resources/views/Shop/preformatted.html.twig
+++ b/www/src/Inamika/FrontendBundle/Resources/views/Shop/preformatted.html.twig
@@ -8,45 +8,26 @@
 		<section>
             <div class="container wow fadeIn">
                 <div class="row">
-                    <div class="col-lg-6">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Productos de alta rotación</h5>
-                                <hr>
-                                <div class="text-center">
-                                    <button role="button" class="btn btn-primary" onclick="location.href='{{ path('api_preformatted_items_download')}}'"><i class="fa fa-download"></i> Descargar lista</button>
+                    <div class="col-lg-3">
+                        <div id="containerLeft">
+                            <div class="card mb-3" id="cartFloat">
+                                <div class="card-body">
+                                    <h5 class="card-title">Mi carrito</h5>
+                                    <hr>
+                                    <div class="text-center" id="bodyCart"></div>
                                 </div>
                             </div>
+                            <ul class="list-group" id="listPreformatted"></ul>
                         </div>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="card" id="cartFloat">
-                            <div class="card-body">
-                                <h5 class="card-title">Mi carrito</h5>
-                                <hr>
-                                <div class="text-center" id="bodyCart">
-                                    {% if app.session.get('_security_main').cart | length %}
-                                        {% for key, total in app.session.get('_security_main').cart.totals %}
-                                            <h4 class="text-right">Total: {{ key }} {{ total.totalVat | number_format(2, ',', '.') }}</h4>
-                                        {% endfor %}
-                                        <div class="text-center"><a role="button" class="btn btn-primary" href="{{ path('inamika_frontend_shop_cart')}}"><i class="fa fa-shopping-cart"></i> Continuar</a></div>
-                                    {% else %}
-                                        <div class="text-center text-muted">No tiene productos en el carrito</div>
-                                    {% endif %}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <br/>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <table id="example" class="table table-condensed table-reduced">
+                    <div class="col-lg-9">
+                        <table id="example" class="table table-condensed table-reduced table-striped">
                             <thead>
                                 <tr>
+                                    <th scope="col" class="text-center"></th>
                                     <th scope="col" class="text-left">Código</th>
                                     <th scope="col" class="text-left">Descripción</th>
-                                    <th scope="col" class="text-right">Costo S/I</th>
+                                    <th scope="col" class="text-right nowrap">Costo S/I</th>
                                     <th scope="col" class="text-center">Cantidad</th>
                                     <th scope="col" class="text-center"></th>
                                 </tr>
@@ -66,63 +47,27 @@
         var amount = new Array();
         var discount=parseFloat("{{ app.session.get('_security_main').category.discount }}");
         $(function (){
+            $("#containerLeft").css("width",$("#containerLeft").css("width"));
             {% if app.session.get('_security_main').cart | length %}
                 {% for key, item in app.session.get('_security_main').cart.items %}
                     cartShop.push({ code: '{{ key }}', val:'{{ item.quantity }}' });
                     amount["{{ key }}"]="{{ item.quantity }}";
                 {% endfor %}
             {% endif %}
-            loadData();
+            loadPreformatted();
+            //loadData();
+            getCart();
         });
         function loadData(){
             loading.show();
+            $(".list-group-item").removeClass('active');
+            $("#option_all").addClass('active');
             $.ajax({
-                url: "{{ path('api_preformatted_items') }}?length=100&search[value]=",
+                url: "{{ path('api_preformatted_items') }}?length=-1&search[value]=",
                 type: 'GET',
                 crossDomain: true,
                 success: function(data) {
-                    table='';
-                    for(var i=0; i<data.data.length; i++){
-                        const product=data.data[i].product;
-                        table+=`<tr>
-                                    <td><small>${product.code}</small></td>
-                                    <td><small>${product.description}</small></td>
-                                    <td class="text-right"><small>${product.currency.symbol} ${Math.round(product.price * discount * 100) / 100 }</small></td>
-                                    <td class="text-center" style="width: 150px;">
-                                        <div class="input-group text-center" >
-                                            <span class="input-group-btn">
-                                                <button type="button" class="btn btn-default btn-number-multi"  data-type="minus" data-field="input${ product.id }">
-                                                    <span class="fa fa-minus"></span>
-                                                </button>
-                                            </span>
-                                            <input type="text" id="input${ product.id }" class="form-control input-number-multi text-center" data-code="${product.code}" value="${getValue(product.code)}" min="${ product.unit }" max="10000" step="${ product.unit }">
-                                            <span class="input-group-btn">
-                                                <button type="button" class="btn btn-default btn-number-multi" data-type="plus" data-field="input${ product.id }">
-                                                    <span class="fa fa-plus"></span>
-                                                </button>
-                                            </span>
-                                        </div>
-                                    </td>
-                                    <td class="text-center"><a href="javascript:quickViewProduct('${product.code}')" class="hidden-sm"><i class="fa fa-search-plus"></i></a></td>
-                                </tr>`;
-                    } 
-                    $("#tableResult").html(table);  
-                    $(".btn-number-multi").on('click',function (){
-                        let direction=$(this).data('type');
-                        let input=$(this).data('field');
-                        let val=parseInt($("#"+input).val());
-                        if(direction=='minus'){
-                            if(val>0)
-                                $("#"+input).val(val-1);
-                        }else{
-                            $("#"+input).val(val+1);
-                        }
-
-                        $("#"+input).trigger('change');
-                    });
-                    $(".input-number-multi").on('change',function (){
-                        refreshCart();
-                    });
+                    renderTable(data);
                 },  
                 complete:function(){
                     loading.hide();
@@ -132,9 +77,113 @@
                 }
             });
         }
+        function loadProductByPreformatted(preformatted){
+            $(".list-group-item").removeClass('active');
+            $("#option_"+preformatted).addClass('active');
+            loading.show();
+            var url='{{ path('api_preformatted_items_group',{ id: 'ENTITY' }) }}';
+            $.ajax({
+                url: url.replace('ENTITY',preformatted)+"?length=-1&search[value]=",
+                type: 'GET',
+                crossDomain: true,
+                success: function(data) {
+                    renderTable(data);
+                },  
+                complete:function(){
+                    loading.hide();
+                },
+                error: function(data, status, error) {
+                    
+                }
+            });
+        }
+        function loadPreformatted(){
+            loading.show();
+            $.ajax({
+                url: "{{ path('api_preformatteds') }}?search[value]=",
+                type: 'GET',
+                crossDomain: true,
+                success: function(data) {  
+                   // html=`<a href="javascript:loadData();" id="option_all" class="list-group-item d-flex justify-content-between align-items-center active">Todas las listas</a>`;
+                    html=``;
+                    for(var i=0; i<data.data.length; i++){
+                        const item=data.data[i];
+                        html+=`<a id="option_${item.id}" href="javascript:loadProductByPreformatted('${item.id}');" class="list-group-item d-flex justify-content-between align-items-center">
+                                    ${item.title}
+                                    <span class="badge badge-primary badge-pill">${item.countCreated}</span>
+                                </a>`;
+                    } 
+                    $("#listPreformatted").html(html);
+                    if(data.data.length>0){
+                        loadProductByPreformatted(data.data[0].id);
+                    }
+                },  
+                complete:function(){
+                    //loading.hide();
+                },
+                error: function(data, status, error) {
+                    
+                }
+            });
+        }
 
+        function renderTable(data){
+            table='';
+
+            for(var i=0; i<data.data.length; i++){
+                let picture;
+                const product=data.data[i].product;
+                if(product){
+                    if(product.picture){
+                        picture='<img width="80" src="{{ asset('uploads') }}/xs/'+product.picture+'">';
+                    }else{
+                        picture='<img width="80" src="{{ asset("bundles/inamikabackoffice/assets/images/image_not_found.jpg") }}">';
+                    }
+                    table+=`<tr>
+                                <td>${picture}</td>
+                                <td><small>${product.code}</small></td>
+                                <td><small>${product.description}</small></td>
+                                <td class="text-right nowrap"><small>${product.currency.symbol} ${Math.round(product.price * discount * 100) / 100 }</small></td>
+                                <td class="text-center" style="width: 150px;">
+                                    <div class="input-group text-center" >
+                                        <span class="input-group-btn">
+                                            <button type="button" class="btn btn-default btn-number-multi"  data-type="minus" data-field="input${ product.id }">
+                                                <span class="fa fa-minus"></span>
+                                            </button>
+                                        </span>
+                                        <input type="text" id="input${ product.id }" class="form-control input-number-multi text-center" data-code="${product.code}" value="${getValue(product.code)}" min="${ product.unit }" max="10000" step="${ product.unit }">
+                                        <span class="input-group-btn">
+                                            <button type="button" class="btn btn-default btn-number-multi" data-type="plus" data-field="input${ product.id }">
+                                                <span class="fa fa-plus"></span>
+                                            </button>
+                                        </span>
+                                    </div>
+                                </td>
+                                <td class="text-center"><a href="javascript:quickViewProduct('${product.code}')" class="hidden-sm"><i class="fa fa-search-plus"></i></a></td>
+                            </tr>`;
+                }else{
+                    table+=`<tr><td colspan="6" class="divider">${data.data[i].title}</td></tr>`;
+                }
+            }
+            $("#tableResult").html(table);  
+            $(".btn-number-multi").on('click',function (){
+                let direction=$(this).data('type');
+                let input=$(this).data('field');
+                let val=parseInt($("#"+input).val());
+                if(direction=='minus'){
+                    if(val>0)
+                        $("#"+input).val(val-1);
+                }else{
+                    $("#"+input).val(val+1);
+                }
+
+                $("#"+input).trigger('change');
+            });
+            $(".input-number-multi").on('change',function (){
+                refreshCart();
+            });
+        }
         function getValue(code){
-            console.log(amount[code]);
             if(amount[code]!=undefined){
                 return amount[code];
             }else{
@@ -158,20 +207,7 @@
                 data: JSON.stringify({ cart: cartShop }),
                 crossDomain: true,
                 success: function(data) {
-                    console.log(data);
-                    var html=``;
-                    $.each(data.cart.totals, function(index, value){
-                        /*html=`
-                            <h5 class="text-right text-muted">Total sin IVA: ${index} ${Math.round(value.total * 100) / 100}</h5>
-                            <h5 class="text-right text-muted">IVA: ${index} ${value.totalVat - value.total}</h5>
-                            <h2 class="text-right">Total: ${index} ${value.total}</h2>
-                        `;*/
-                        html+=`
-                            <h4 class="text-right">Total: ${index} ${Math.round(value.totalVat *100) / 100 }</h4>
-                        `;
-                    });
-                    html+=`<div class="text-center"><a role="button" class="btn btn-primary" href="{{ path('inamika_frontend_shop_cart')}}"><i class="fa fa-shopping-cart"></i> Continuar</a></div>`;
-                    $("#bodyCart").html(html);
+                    renderCart(data);
                 },  
                 complete:function(){
                     
@@ -180,6 +216,47 @@
                     
                 }
             });
+        }
+
+        function getCart(){
+            $("#bodyCart").html('<p><i class="fa fa-spinner fa-2x fa-spin" aria-hidden="true"></i></p>');
+            $.ajax({
+                url: "{{ path('api_cart') }}",
+                type: 'GET',
+                crossDomain: true,
+                success: function(data) {
+                    renderCart(data);
+                },  
+                complete:function(){
+                    
+                },
+                error: function(data, status, error) {
+                    
+                }
+            });
+        }
+
+        function renderCart(data){
+            var html=``;
+            $.each(data.cart.totals, function(index, value){
+                if(value.totalVat>0){
+                    /*html=`
+                        <h5 class="text-right text-muted">Total sin IVA: ${index} ${Math.round(value.total * 100) / 100}</h5>
+                        <h5 class="text-right text-muted">IVA: ${index} ${value.totalVat - value.total}</h5>
+                        <h2 class="text-right">Total: ${index} ${value.total}</h2>
+                    `;*/
+                    html+=`
+                        <h5 class="text-right text-muted">IVA: ${index} ${Math.round((value.totalVat - value.total)*100) / 100}</h5>
+                        <h4 class="text-right">Total: ${index} ${Math.round(value.totalVat *100) / 100 }</h4>
+                    `;
+                }
+            });
+            if(html.length>0){
+                html+=`<div class="text-center"><a role="button" class="btn btn-primary" href="{{ path('inamika_frontend_shop_cart')}}"><i class="fa fa-shopping-cart"></i> Continuar</a></div>`;
+            }else{
+                html+=`<div class="text-center text-muted">No tiene productos en el carrito</div>`;
+            }
+            $("#bodyCart").html(html);
         }
 	</script>
 {% endblock javascripts %}
